--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,31 +1,34 @@
 #heading {
-    background-color: peachpuff;
-    height: 80px;
-    width: 400px; 
+    background-color: palevioletred;
+    color: cornsilk;
+    height: 50px;
+    width: 330px; 
 }
 
 #content {
-    background-color: olivedrab;
-    height: 400px;
-    width: 500px; 
+    background-color:lime;
+    height: 150px;
+    width: 200px; 
 }
 
 #winloss {
-    background-color: pink;
-    height: 200px;
-    width: 300px; 
+    background-color: chartreuse;
+    height: 100px;
+    width: 200px; 
 }
 
-#crystal-images {
-    
+.gembuttons {
+    height: 50x;
+    width: 50px; 
+        
 }
 #userScore, #totalScore {
-    background-color: purple;
-    height: 200px;
-    width: 300px; 
+    background-color: aqua;
+    height: 100px;
+    width: 200px; 
 }
-#score {
-    background-color: bisque;
-    height: 200px;
-    width: 300px; 
+#randomNumber {
+    background-color:chocolate;
+    height: 100px;
+    width: 175px; 
 }
